Cover the spawn counter and the not-condition, and name what is left
Spawn takes null for a template and returns before it reflects on a
class, so it costs nothing to build; DocumentBase's constructor only
stores a file, so a test subclass reaches parseLogicNot with a
hand-built DOM and never touches disk. Both were validated against the
versions they replaced.

The spawn counter, driven the old way -- a bare decrement from another
thread, no lock and no floor -- leaves 11,706, 13,139 and 12,120 of
sixteen thousand. That number wants reading carefully rather than
repeating: a tight loop lets the JIT hold a non-volatile field in a
register, so it exaggerates what a server spread over time would lose.
It proves the loss is possible and that the fix prevents it, no more.

parseLogicNot without its guard fails the two cases that matter and
passes the other two, which is what should happen: an empty <not> was
already refused and the readable path was never touched.

41 tests to 47. QuestState stays verified by reading alone: its
constructor needs a real Player and Quest's reflects on a script loader
that is null outside one, and test/libs holds only JUnit and hamcrest.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>